# divoom_lib

./: .coverage  .divoom_last_working_char.json  .geminiignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DIVOOM_API_DOC.md  GEMINI.md  Makefile  README.md  SUCCESSFUL_ACTIONS.md  TESTING_PLAN.md  TEST_RESULTS.md  api_test.py  build.sh  build_native.sh  debug_divoom.py  debug_getters.py  debug_output.lll3  discover_and_get_all_info.py  discover_devices.py  divoom-control  divoom.spec  divoom_control.py  divoom_protocol.py  get_all_divoom_info.py  get_divoom_lib.py  last_run.txt  legacy.txt  minimal_api.py  minimal_api.py.works  minimal_bleak.py  plan.md  probe.txt  probe2.txt  probe_minimal_api.txt  probe_minimal_api_run.txt  (+15 more)
.githooks/: pre-commit
api_scraper/: README.md  analyze_captures.py  capture_divoom.py  divoom_auth.py  download_test.py  gallery_probe.py  gui_main.py  monthly_best_daemon.py  probe_with_auth.py  register_virtual_device.py  scrape_divoom_docs.py
archive/: __init__.py
debug/: .divoom_last_working_char.json  debug_brightness_getter.py  debug_channel_switch.py  exit_tool_mode.py  minimal_bleak.py  send_raw_bytestream.py
divoom_api/: __init__.py  alarm.py  base.py  constants.py  display.py  divoom_protocol.py  game.py  light.py  music.py  sleep.py  system.py  timeplan.py  tool.py
divoom_daemon/: __init__.py  command_queue.py  daemon.py  daemon_client.py  daemon_config.py  daemon_protocol.py  device_owner.py  live_jobs.py  macos_notifications.py  menubar.py  menubar_status.py  notification_router.py  notification_service.py  owner_art.py  owner_connect.py  owner_live.py  owner_loop.py  owner_notify.py  owner_util.py  owner_wall.py  socket_server.py  spp_bridge.py
divoom_gui/: __init__.py  aid_sleep.py  audio_visualizer.py  clock_faces.py  control_server.py  daemon_bridge.py  debug_mixin.py  gallery_download.py  gallery_hot_api.py  gallery_sync.py  gui_api.py  gui_main.py  lifecycle_mixin.py  lighting_forward.py  mcp_control.py  media_sync.py  permissions.py  photo_albums.py  playlists.py  presets.json  presets_manager.py  scanner_mixin.py
divoom_lib/: __init__.py  alarm.py  base.py  ble_connection.py  ble_notify.py  ble_preflight.py  ble_probe.py  ble_reads.py  ble_registry.py  ble_transport.py  bt_spp_rfcomm.py  bt_spp_transport.py  cli.py  cli_commands.py  cloud.py  connection.py  constants.py  display.py  divoom.py  divoom_auth.py  divoom_protocol.py  exceptions.py  framing.py  game.py  hot_update_state.py  hotchannel_config.py  lan_transport.py  lan_transport_extras.py  lan_transport_photo.py  libdivoom_compact.dylib  lifecycle_config.py  light.py  mcp_server.py  mcp_tools.py  media_decoder.py  models.py  monthly_best_daemon.py  music.py  native_lib.py  probing.py  (+11 more)
divoom_menubar/: __init__.py  menubar.py  menubar_client.py
divoomd/: Info.plist  daemon_info.plist  test_show_image.py
docs/: APK_COMPARISON.md  APP_IMPROVEMENT_PLAN.md  ARCH_GAP_SCAN_2026-06.md  ARCH_GAP_SCAN_2_2026-06.md  BACKLOG.md  BLE_HARDENING_REVIEW_2026-06.md  CHANNEL_ARCHITECTURE.md  CODE_REVIEW.md  CUSTOM_CHANNEL_VS_APK.md  DESKTOP_GUI.md  DEVICE_VALIDATION_PLAN.md  DIVOOM_API_DOC.md  DIVOOM_PROTOCOL_SUMMARY.md  DRAG_FIX_HISTORY.md  ENGINEERING_NOTES.md  MCP_SERVER.md  NOTIFICATIONS_SETUP.md  PARITY_TRACKER_NATIVE_UI.md  PLANNED_WORK.md  PLANNING_BLE_HARDENING.md  PLANNING_NATIVE_PORT.md  PLANNING_NATIVE_PORT_HARDENING.md  PLANNING_NATIVE_UI.md  PLANNING_ROUND10.md  PLANNING_ROUND11.md  PLANNING_ROUND12.md  PLANNING_ROUND12_D_AUDIT.md  PLANNING_ROUND13.md  PLANNING_ROUND14.md  PLANNING_ROUND15.md  PLANNING_ROUND16.md  PLANNING_ROUND17.md  PLANNING_ROUND19.md  PLANNING_ROUND23.md  PLANNING_ROUND24.md  PLANNING_ROUND28.md  PLANNING_ROUND2_CONTINUATION.md  PLANNING_ROUND3.md  PLANNING_ROUND30.md  PLANNING_ROUND31.md  (+36 more)
examples/: README.md  auto_connect.py  debug_divoom.py  debug_getters.py  debug_light_command.py  debug_light_settings.py  discover_and_connect.py  discover_and_get_all_info.py  discover_characteristics.py  discover_devices.py  divoom_control.py  get_all_divoom_info.py  get_divoom_lib.py  list_ble_devices.py  list_files.py  push_animated_gif.py  push_static_image.py  rotate_channels.py  rotate_to_cloud.py  set_alarm.py  set_radio.py  set_tivoom_light.py  set_weather.py
gui/: compact.c  control_server.py  daemon.py  daemon_protocol.py  gallery_sync.py  gui_api.py  gui_main.py  libdivoom_compact.dylib  macos_notifications.py  mcp_control.py  media_decoder.py  media_sync.py  menubar.py  presets.json  (+2 more)
native-port/divoom-menubar/: Cargo.toml
native-port/divoom-menubar/src/: daemon.rs  launch.rs  main.rs  state.rs  tray.rs
native-port/divoom-ui/: Cargo.toml
native-port/divoom-ui/fonts/: ATTRIBUTION.txt
native-port/divoom-ui/src/: app.rs  channel_previews.rs  channels.rs  daemon.rs  device_settings.rs  fonts.rs  gallery.rs  icons.rs  main.rs  model.rs  pixel_art.rs  preview.rs  schedule.rs  settings.rs  shell.rs  text_font.rs  theme.rs  tray.rs  ui_widgets.rs  wall.rs  widgets.rs
native-port/divoomd/: Cargo.toml  build.rs  make_divoomd_app.sh  smoke_display_aliases.py
native-port/divoomd/src/: art.rs  art_codec.rs  art_hot.rs  autoprobe.rs  ble.rs  cloud.rs  cloud_cmds.rs  cloud_store.rs  command_queue.rs  daemon.rs  daemon_ble.rs  daemon_connect.rs  framing.rs  hot_state.rs  image_proc.rs  lan.rs  lib.rs  live_jobs.rs  macos_notifications.rs  main.rs  mcp.rs  mock_device_tests.rs  mock_transport.rs  models.rs  monthly_best.rs  native_encode.rs  protocol.rs  response.rs  socket_server.rs  spp.rs  sync_artwork.rs  transport.rs  wall.rs
native-port/divoomd/src/device_call/: alarm.rs  basic.rs  design.rs  game.rs  mod.rs  sleep.rs  system.rs  text.rs  timeplan.rs  tools.rs
native-port/divoomd/src/live_jobs/: music.rs  render.rs
native-port/divoomd/tests/: autoprobe_behavior.rs  command_queue_behavior.rs  daemon_behavior.rs  image_vectors.json  native_encode_parity.rs  socket_server_behavior.rs
native-port/spike-ble/: Cargo.toml  Info.plist  README.md  make_spike_app.sh
native-port/spike-ble/src/: main.rs
(+636 files in other folders)
