[package]
name = "divoom-ui"
version = "0.1.0"
edition = "2021"
description = "Native (Rust/egui) cross-platform UI for divoom-control — replaces the pywebview GUI + pyobjc menubar. Talks to divoomd over the NDJSON socket."
publish = false

[[bin]]
name = "divoom-ui"
path = "src/main.rs"

# egui/eframe + tray-icon are all MIT/Apache-2.0 (permissive) — the project ships
# MIT and may go commercial later, so no GPL/royalty toolkit (rules out Slint).
[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
# Cross-platform tray/menubar (MIT/Apache, Tauri ecosystem). Mirrors the pyobjc
# NSStatusItem menubar; integrates with eframe's winit loop via its event channels.
tray-icon = "0.19"
