[package]
name = "divoomd"
version = "0.1.0"
edition = "2021"
description = "Native (Rust) port of the Divoom daemon — built in parallel to the Python daemon, which stays ground truth."
publish = false

[lib]
name = "divoomd"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }
