[package]
name = "divoomd"
version = "0.1.0"
edition = "2021"
description = "Native (Rust) port of the Divoom daemon — built in parallel to the Python daemon, which stays ground truth."
publish = false

[lib]
name = "divoomd"
path = "src/lib.rs"

[[bin]]
name = "divoomd"
path = "src/main.rs"

[features]
default = ["ble"]
# `ble` pulls the platform BLE stack (btleplug). The protocol/transport core +
# its tests build and run WITHOUT it (`--no-default-features`), keeping the tested
# core hardware- and platform-free.
ble = ["dep:btleplug", "dep:futures", "dep:uuid"]

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net", "io-util", "signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
btleplug = { version = "0.11", optional = true }
futures = { version = "0.3", optional = true }
uuid = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
plist = "1"
sysinfo = "0.30"
md-5 = "0.10"
hmac = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }
tempfile = "3"
lazy_static = "1.4"
