[package]
name = "divoom-spike-ble"
version = "0.1.0"
edition = "2021"
description = "Phase-1 spike: prove btleplug + tokio can own a Divoom over BLE on macOS (and that a signed native binary gets the TCC Bluetooth grant)."
publish = false

[[bin]]
name = "divoom-spike-ble"
path = "src/main.rs"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
uuid = "1"

[profile.release]
opt-level = 2
strip = true
